# eris-ketos

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: cetacean_geometric_analysis.ipynb  cetacean_geometric_analysis.py
papers/: geometric_cetacean_communication.tex  references.bib
src/eris_ketos/: __init__.py  acoustic_transforms.py  decoder_robustness.py  poincare_coda.py  spd_spectral.py  tda_clicks.py
tests/: test_dri.py  test_poincare.py  test_spd.py  test_tda.py  test_transforms.py
