[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eris-ketos"
version = "0.2.0"
description = "Geometric analysis of cetacean communication — hyperbolic embeddings, topological data analysis, and adversarial robustness testing for whale vocalization decoding"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Andrew H. Bond", email = "andrew.bond@sjsu.edu" },
]
keywords = [
    "bioacoustics",
    "cetacean",
    "whale",
    "hyperbolic-geometry",
    "topological-data-analysis",
    "poincare",
    "sperm-whale",
    "coda",
    "adversarial-robustness",
    "geometric-deep-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "librosa>=0.10.0",
]

[project.optional-dependencies]
tda = [
    "ripser>=0.6.0",
    "persim>=0.3.0",
]
ml = [
    "timm>=0.9.0",
    "torchaudio>=2.0.0",
    "scikit-learn>=1.3.0",
]
data = [
    "datasets>=2.14.0",
    "pandas>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.5.0",
]
all = ["eris-ketos[tda,ml,data,dev]"]

[project.urls]
Homepage = "https://github.com/ahb-sjsu/eris-ketos"
Repository = "https://github.com/ahb-sjsu/eris-ketos"
Issues = "https://github.com/ahb-sjsu/eris-ketos/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/eris_ketos"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
